# abcg

examples/: CMakeLists.txt
examples/asteroids/: asteroids.hpp  bullets.hpp  main.cpp  openglwindow.cpp  openglwindow.hpp  ship.cpp  ship.hpp  starlayers.cpp  starlayers.hpp
examples/coloredtriangles/: openglwindow.cpp  openglwindow.hpp
examples/firstapp/: main.cpp  openglwindow.cpp
examples/jet-fighter/: CMakeLists.txt  README.md  bullets.cpp  health.hpp  main.cpp  openglwindow.cpp  openglwindow.hpp  ship.cpp
examples/juego/: CMakeLists.txt  README.md  bullets.cpp  bullets.hpp  gamedata.hpp  health.cpp  health.hpp  main.cpp  openglwindow.cpp  ship.cpp  ship.hpp
examples/loadmodel/: main.cpp  openglwindow.hpp
examples/lookat/: camera.cpp  camera.hpp  ground.cpp  ground.hpp  main.cpp  openglwindow.cpp  openglwindow.hpp
examples/regularpolygons/: openglwindow.cpp  openglwindow.hpp
examples/sierpinski/: openglwindow.cpp  openglwindow.hpp
examples/starfield/: main.cpp  openglwindow.hpp
examples/synthwave/: CMakeLists.txt  gradient.hpp  ground.cpp  ground.hpp  main.cpp  openglwindow.cpp  openglwindow.hpp  pyramid.cpp  pyramid.hpp  rosa.cpp  rosa.hpp  scene_element.hpp  stars.cpp  stars.hpp  sun.cpp  sun.hpp
examples/synthwave-drive/: CMakeLists.txt  README.md  car.cpp  car.hpp  gradient.cpp  ground.cpp  ground.hpp  main.cpp  model.cpp  model.hpp  openglwindow.cpp  openglwindow.hpp  stars.cpp  stars.hpp  sun.cpp  vertex.hpp
examples/tic-tac-toe/: CMakeLists.txt  main.cpp  openglwindow.cpp  openglwindow.hpp  tic-tac-toe.cpp  tic-tac-toe.hpp
(+34 files in other folders)
