add_subdirectory(helloworld)
add_subdirectory(firstapp)
add_subdirectory(sierpinski)
add_subdirectory(coloredtriangles)
add_subdirectory(tic-tac-toe)
add_subdirectory(regularpolygons)
add_subdirectory(asteroids)
add_subdirectory(loadmodel)
add_subdirectory(jet-fighter)
add_subdirectory(lookat)
add_subdirectory(viewer1)
add_subdirectory(starfield)
